Sesion 1 de Marzo Automovil

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 diagramaBD.img
 /Tareas/TareaLibro/nbproject/private/
 /Tareas/TareaLibro/build/
+/Clases/ConceptosBasicos/build/
+/Clases/ConceptosBasicos/dist/
