Tarea de libro y pelicula

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,8 @@ diagramaBD.img
 /Tareas/TareaLibro/build/
 /Clases/ConceptosBasicos/build/
 /Clases/ConceptosBasicos/dist/
+/Tareas/ReutilizacionCodigo2209/nbproject/private/
+/Clases/ReutilizacionCodigo2209/nbproject/private/
+/Clases/ReutilizacionCodigo2209/build/
+/Tareas/TareaLibroPelicula/nbproject/private/
+/Tareas/TareaLibroPelicula/build/
