Sesi{on 21 de Abril

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@ diagramaBD.img
 /Clases/ReutilizacionCodigo2209/build/
 /Tareas/TareaLibroPelicula/nbproject/private/
 /Tareas/TareaLibroPelicula/build/
+/Clases/JavaBasico2209/nbproject/private/
+/Clases/JavaBasico2209/build/
+/Clases/JavaBasico2209/dist/
