--- a/Clases/JavaBasico2209/nbproject/project.properties
+++ b/Clases/JavaBasico2209/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=JavaBasico2209
-main.class=javabasico2209.JavaBasico2209
+main.class=javabasico2209.PruebaEjemplo
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
