Clase 5 de Mayo

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,6 @@ diagramaBD.img
 /Clases/JavaBasico2209/nbproject/private/
 /Clases/JavaBasico2209/build/
 /Clases/JavaBasico2209/dist/
+/Clases/JavaBasico2209Parte2/nbproject/private/
+/Clases/JavaBasico2209Parte2/build/
+/Clases/JavaBasico2209Parte2/dist/
